Rewrite StringInspect as interactive Go TUI application
Replace C CLI tool with feature-rich terminal UI built on Bubble Tea:
- Real-time character encoding analysis (ASCII, hex, dec, bin, octal, Unicode)
- Three view modes: table, detail, compact (hex dump)
- Character navigation with vim-style keys
- Search by hex (0x41), decimal (65), or literal character
- Export to text, JSON, or CSV
- Input history with arrow key navigation
- Clipboard support (paste input, copy char info)
- File input via -f flag
- Color-coded character types
- Responsive terminal UI with help overlay (F1)

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,25 @@
 # Ignore binary and build files
 stringinspect
-*.o
-*.out
 *.exe
+
+# Go
+coverage.out
+coverage.html
+
+# VHS tape files (for demo recording)
+*.tape
+
+# Agent instructions (development only)
+AGENTS.md
 
 # MacOS
 .DS_Store
 
 # Linux
 *~
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
